--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 min-height: 90svh;
                 padding: 0;
                 margin: 0;
-                background:var(--fondo) url('img/fondo.webp') 0 -10vh no-repeat;
+                background-image: linear-gradient(rgba(255, 255, 255, 0.3) 0, rgba(255, 255, 255, 4) 90vh), url("https://ichef.bbci.co.uk/ace/ws/640/cpsprodpb/148A6/production/_92643148_gettyimages-159010266.jpg.webp");
                 background-size:100% auto;
                 text-align: center;
                 display: flex;
@@ -60,7 +60,7 @@
             header h1 {
                 line-height: 1.1;
                 font-size: calc(3rem + 2vw);
-                font-weight: 400;
+                font-weight: 800;
             }
 
             header h5,
@@ -83,7 +83,6 @@
                 width: 90%;
                 margin: 0 auto;
             }
-
             /* Títulos dentro de main */
             h2,
             h3 {
@@ -332,20 +331,19 @@
         </header>
 
         <main>
-            <img src="img/pais-ejemplo.webp" class="mapamundi" alt="imagen editada por Gemini, le pedí sacar las letras">
+            <img src="peru.png" class="mapamundi" alt="Perú, nación parte del anillo de fuego">
             <p class="lead">
                 Perú, cuna de civilizaciones milenarias y un tesoro de biodiversidad, es un país que vive en constante interacción con la fuerza de la naturaleza. 
                 Su ubicación geográfica no solo le regala una geografía espectacular, sino que también lo sitúa en una de las zonas sísmicas más activas del planeta: <em>el Cinturón o Anillo de Fuego del Pacífico.</em><br><br>
                 Esta realidad geológica convierte a Perú en un territorio donde la prevención y la comprensión de los sismos son fundamentales para sus habitantes.
             </p>
 
-            <p>Perú está directamente sobre el Cinturón de Fuego del Pacífico debido al proceso de subducción. La Placa Oceánica de Nazca se desliza constantemente por debajo de la Placa Continental Sudamericana.</p>
+            <p>Perú es parte integral del <em>Anillo de Fuego</em> a través de su zona de subducción. 
+                Frente a su costa, la densa <em>Placa de Nazca (oceánica)</em> se desliza y hunde continuamente debajo de la <em>Placa Sudamericana</em> (continental). </p>
 
-            <img src="img/cinturon.png" class="cinturon" alt="imagen editada por Gemini, le pedí sacar las letras">
+            <img src="https://img.asmedia.epimg.net/resizer/v2/ZEOGAY4GGVGOBBQ5VFWDEY4X6M.jpg?auth=5eea4d2f911e169a281cf794edd304ccdfba73636dd54bf99707cb483ac95cd2&width=1472&height=828&focal=633%2C286" class="cinturon" alt="Imagen extraída de periódico AS"> <figcaption> <a href= "https://as.com/actualidad/ciencia/donde-esta-el-cinturon-de-fuego-del-pacifico-el-lugar-en-el-que-se-producen-el-90-de-los-terremotos-de-la-tierra-n-2/">Imagen extraída de periódico AS</a></figcaption>
 
-            <p>Perú es parte integral del Anillo de Fuego a través de su zona de subducción. 
-                Frente a su costa, la densa Placa de Nazca (oceánica) se desliza y hunde continuamente debajo de la Placa Sudamericana (continental). 
-                Este roce constante acumula una enorme tensión en el punto de contacto. 
+            <p> Este roce constante acumula una enorme tensión en el punto de contacto. 
                 Su liberación repentina provoca los megaterremotos de gran magnitud y los tsunamis que históricamente han afectado al país. 
                 Este mismo proceso geológico ha sido crucial en el levantamiento de la Cordillera de los Andes.</p>
 
