--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 min-height: 90svh;
                 padding: 0;
                 margin: 0;
-                background-image: linear-gradient(rgba(255, 255, 255, 0.3) 0, rgba(255, 255, 255, 4) 90vh), url("https://ichef.bbci.co.uk/ace/ws/640/cpsprodpb/148A6/production/_92643148_gettyimages-159010266.jpg.webp");
+                background-image: linear-gradient(rgba(255, 255, 255, 0.3) 0, rgba(255, 255, 255, 4) 90vh), url("https://www.infobae.com/new-resizer/d6B9iKFMlztidbjW1KNsWUXRJSI=/arc-anglerfish-arc2-prod-infobae/public/ESMWDG2KPNAOXOEXPVPA47O3HA.png");
                 background-size:100% auto;
                 text-align: center;
                 display: flex;
